# lisa-os

./: .gitignore  CLAUDE.md  Cargo.toml  Kimi.md  README.md  justfile
.github/workflows/: ci.yml  nightly.yml  release.yml  usb-image.yml
apps/files-patches/: README.md
apps/mail-patches/: README.md
apps/notes/: Cargo.toml  README.md  org.lisa.notes.json
apps/notes/src/: main.rs  server.rs  storage.rs
apps/photos-patches/: README.md
apps/recorder/: README.md
apps/terminal-integration/: README.md
branding/: DESIGN_BRIEF.md  README.md
cli/lisa/: Cargo.toml  README.md
cli/lisa/src/: agent.rs  main.rs  voice.rs
daemons/agentd/: Cargo.toml  README.md
daemons/agentd/prompts/: system-policy.md
daemons/agentd/src/: bus.rs  dbus.rs  journal.rs  lib.rs  main.rs  manifest.rs  registry.rs  tier.rs
daemons/agentd/tests/: dbus.rs
daemons/contextd/: README.md
daemons/contextd/src/: acl.rs  embed.rs  lib.rs  store.rs
daemons/inferenced/: Cargo.toml  README.md
daemons/inferenced/src/: api.rs  config.rs  dbus.rs  engine.rs  lib.rs  llama.rs  main.rs  openai.rs  pool.rs  remote.rs  scheduler.rs
daemons/inferenced/tests/: api.rs  dbus.rs
daemons/modeld/: Cargo.toml  README.md
daemons/modeld/src/: catalog.rs  fetch.rs  lib.rs  main.rs  recommend.rs  store.rs
daemons/remoted/: Cargo.toml  README.md
daemons/remoted/src/: api.rs  consent.rs  dbus.rs  lib.rs  main.rs  oauth.rs  provision.rs  proxy.rs  registry.rs  secrets.rs  service.rs
daemons/remoted/tests/: api.rs  dbus.rs
docs/: HANDOVER.md  Kimi.md  PACKAGES.md  PLAN.md  RELEASE_PLAN.md  ROADMAP.md  STATUS.md  VISION.md  WEB_PLAN.md
docs/adr/: 0001-arch-immutable-base.md  0002-rust-zbus-axum.md  0003-two-track-delivery.md  0004-flutter-lane-forge.md  0006-monorepo-staged-extraction.md  0007-fcitx5-addon-cxx.md  0008-portal-standalone-service.md  0008-remote-providers.md  0009-agent-bus-core.md  0011-ambient-assistant.md  0014-lisa-ui-material-fork.md  README.md
docs/notes/: design-direction.md
docs/sdk/: README.md
docs/sdk/samples/: recipe_extractor.py
docs/specs/: app-manifest.md
forge/app/: README.md
ime/fcitx5-lisa/: CMakeLists.txt  README.md  lisa-addon.conf.in
ime/fcitx5-lisa/src/: http.cpp  http.h  lisa.cpp
ime/fcitx5-lisa/tests/: CMakeLists.txt  http_test.cpp
libs/forge-harness/: README.md
libs/forge-harness/src/: agent.rs  jail.rs  lib.rs  openai.rs  tools.rs
libs/liblisa/: Cargo.toml  README.md
libs/liblisa-gtk/: README.md
libs/liblisa-qt/: README.md
libs/liblisa/src/: grammar.rs  intent.rs  lib.rs  tasks.rs
libs/lisa-ledger/: Cargo.toml
libs/lisa-ledger/src/: lib.rs
libs/lisa_flutter/: README.md
libs/lisa_ui/: CHANGELOG.md  README.md  pubspec.yaml
libs/lisa_ui/lib/: lisa_ui.dart
libs/lisa_ui/test/: lisa_ui_test.dart
libs/mcp-bus/: README.md
models/adapters/: README.md
models/catalog/: catalog.toml
models/evals/: README.md
os/installer/: README.md
os/kernel/: README.md
os/layer/: install.sh  uninstall.sh
os/layer/snapper/: README.md
os/mkosi/: README.md  mkosi.conf  mkosi.finalize  mkosi.postinst.chroot
os/mkosi/mkosi.extra/etc/gdm/: custom.conf
os/mkosi/mkosi.extra/etc/sudoers.d/: 10-wheel
os/mkosi/mkosi.extra/usr/lib/NetworkManager/conf.d/: 10-lisa-wifi-backend.conf
os/mkosi/mkosi.extra/usr/lib/modprobe.d/: hid_apple.conf
os/mkosi/mkosi.extra/usr/lib/repart.d/: 50-var.conf
os/mkosi/mkosi.extra/usr/lib/systemd/journald.conf.d/: 10-lisa-persistent.conf
os/mkosi/mkosi.extra/usr/lib/systemd/system/: lisa-boot-report.service
os/mkosi/mkosi.extra/usr/lib/systemd/system-preset/: 00-lisa.preset
os/mkosi/mkosi.extra/usr/lib/sysupdate.d/: 50-root.conf  60-uki.transfer
os/mkosi/mkosi.extra/usr/lib/tmpfiles.d/: lisa-network-persist.conf
os/mkosi/mkosi.repart/: 00-esp.conf  10-root.conf  11-root-b.conf  20-var.conf
os/repo-tools/: README.md  build-packages.sh
portals/xdg-desktop-portal-lisa/: Cargo.toml  README.md
portals/xdg-desktop-portal-lisa/src/: consent.rs  grants.rs  identity.rs  lib.rs  main.rs  portal.rs  quota.rs  upstream.rs
portals/xdg-desktop-portal-lisa/tests/: portal.rs
shell/launcher/: README.md  extension.js  metadata.json
shell/launcher/lib/: ranking.js
shell/launcher/tests/: ranking.test.js
shell/ledger-app/: README.md  lisa-ledger-app.js  org.lisa.LedgerApp.desktop
shell/ledger-app/lib/: model.js
shell/ledger-app/tests/: model.test.js
shell/overlay-extension/: README.md  extension.js  metadata.json  stylesheet.css
shell/overlay-extension/backend/: lisa-overlayd.js  org.lisa.Overlay1.service
shell/overlay-extension/lib/: envelope.js  iface.js
shell/overlay-extension/schemas/: org.gnome.shell.extensions.lisa-overlay.gschema.xml
shell/overlay-extension/tests/: envelope.test.js
shell/settings/: README.md  lisa-settings.js  org.lisa.Settings.desktop
shell/settings/lib/: model.js
shell/settings/tests/: model.test.js
shell/testing/: harness.js
tests/acl-fuzz/: README.md
tests/e2e/: README.md  egress-test.sh  guided-validation.sh  layer-test.sh  openai_client_test.py
tests/injection-suite/: Cargo.toml  README.md
tests/injection-suite/src/: lib.rs
tests/injection-suite/tests/: gate.rs
tests/perf/: README.md
web/: README.md
web/app/: basepod.yaml
web/app/public/: index.html
web/dev/: basepod.yaml
web/dev/public/: index.html
