[workspace]
resolver = "3"
members = [
    "libs/liblisa",
    "libs/lisa-ledger",
    "daemons/inferenced",
    "daemons/modeld",
    "cli/lisa", "libs/lisa-ledger", "daemons/contextd", "libs/forge-harness",
    "portals/xdg-desktop-portal-lisa",
]

[workspace.package]
edition = "2024"
license = "GPL-2.0-only"
repository = "https://github.com/Lisa-AgenticOS/lisa-os"

[workspace.dependencies]
liblisa = { path = "libs/liblisa" }
lisa-modeld = { path = "daemons/modeld" }
