[workspace]
resolver = "3"
members = [
    "libs/liblisa",
    "libs/lisa-ledger",
    "libs/forge-harness",
    "daemons/inferenced",
    "daemons/modeld",
    "daemons/contextd",
    "daemons/remoted",
    "daemons/agentd",
    "portals/xdg-desktop-portal-lisa",
    "cli/lisa",
    "tests/injection-suite",
]

[workspace.package]
edition = "2024"
license = "GPL-2.0-only"
repository = "https://github.com/Lisa-AgenticOS/lisa-os"

[workspace.dependencies]
liblisa = { path = "libs/liblisa" }
lisa-modeld = { path = "daemons/modeld" }
