[package]
name = "lisa-notes"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde_json = "1.0.151"

[dev-dependencies]
mcp-bus = { path = "../../libs/mcp-bus" }
tempfile = "3.27.0"
