[package]
name = "lisa"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow = "1.0.104"
clap = { version = "4.6.3", features = ["derive", "env"] }
lisa-ledger = { version = "0.1.0", path = "../../libs/lisa-ledger" }
lisa-modeld = { version = "0.1.0", path = "../../daemons/modeld" }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
ureq = { version = "3.3.0", features = ["json"] }
