[package]
name = "lisa"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow = "1.0.104"
blake3 = "1.8.5"
clap = { version = "4.6.3", features = ["derive", "env"] }
lisa-contextd = { version = "0.1.0", path = "../../daemons/contextd" }
lisa-ledger = { version = "0.1.0", path = "../../libs/lisa-ledger" }
lisa-modeld = { version = "0.1.0", path = "../../daemons/modeld" }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
ureq = { version = "3.3.0", features = ["json"] }
zstd = "0.13.3"
