[package]
name = "lisa"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow = "1.0.104"
blake3 = "1.8.5"
clap = { version = "4.6.3", features = ["derive", "env"] }
forge-harness = { version = "0.1.0", path = "../../libs/forge-harness" }
liblisa = { version = "0.1.0", path = "../../libs/liblisa" }
lisa-contextd = { version = "0.1.0", path = "../../daemons/contextd" }
lisa-ledger = { version = "0.1.0", path = "../../libs/lisa-ledger" }
lisa-modeld = { version = "0.1.0", path = "../../daemons/modeld" }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
ureq = { version = "3.3.0", features = ["json"] }
# Agent Bus client (org.lisa.Agent1). Same feature set as agentd — the
# tokio flavor, never async-io (feature unification would flip agentd's
# zbus too, and async-io runs interface methods off-runtime → panics).
# blocking-api gives the sync CLI a bus client without an async runtime
# of its own.
zbus = { version = "5.18.0", features = ["p2p", "tokio", "blocking-api"], default-features = false }
zstd = "0.13.3"
