[package]
name = "lisa-agentd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.104"
blake3 = "1.8.5"
lisa-ledger = { version = "0.1.0", path = "../../libs/lisa-ledger" }
mcp-bus = { version = "0.1.0", path = "../../libs/mcp-bus" }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
thiserror = "2.0.19"
tokio = { version = "1.53.1", features = ["macros", "rt-multi-thread", "signal", "net"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zbus = { version = "5.18.0", features = ["p2p", "tokio"], default-features = false }

[dev-dependencies]
tempfile = "3.27.0"
