[package]
name = "lisa-inferenced"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
async-stream = "0.3.6"
axum = "0.8.9"
clap = { version = "4.6.3", features = ["derive"] }
futures = "0.3.33"
liblisa = { version = "0.1.0", path = "../../libs/liblisa" }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
thiserror = "2.0.19"
tokio = { version = "1.53.1", features = ["macros", "rt-multi-thread", "process", "signal", "time", "net"] }
toml = "1.1.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zbus = "5.18.0"

[dev-dependencies]
http-body-util = "0.1.4"
tower = { version = "0.5.3", features = ["util"] }
