[package]
name = "lisa-modeld"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
blake3 = "1.8.5"
clap = { version = "4.6.3", features = ["derive", "env"] }
serde = { version = "1.0.229", features = ["derive"] }
thiserror = "2.0.19"
toml = "1.1.3"
ureq = "3.3.0"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
