[package]
name = "lisa-remoted"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow = "1.0.104"
axum = "0.8.9"
base64 = "0.22.1"
blake3 = "1.8.5"
clap = { version = "4.6.3", features = ["derive"] }
lisa-ledger = { version = "0.1.0", path = "../../libs/lisa-ledger" }
rand = "0.9.2"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "form", "rustls"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
sha2 = "0.10.9"
thiserror = "2.0.19"
tokio = { version = "1.53.1", features = ["macros", "rt-multi-thread", "net", "signal", "io-util", "fs"] }
toml = "1.1.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zbus = { version = "5.18.0", features = ["p2p", "tokio"], default-features = false }

[dev-dependencies]
http-body-util = "0.1.4"
tempfile = "3.27.0"
tower = { version = "0.5.3", features = ["util"] }
