[package]
name = "xdg-desktop-portal-lisa"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "lisa_portal"
path = "src/lib.rs"

[[bin]]
name = "xdg-desktop-portal-lisa"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.104"
blake3 = "1.8.5"
clap = { version = "4.6.3", features = ["derive"] }
futures = "0.3.33"
lisa-ledger = { version = "0.1.0", path = "../../libs/lisa-ledger" }
rusqlite = { version = "0.40.1", features = ["bundled"] }
thiserror = "2.0.19"
tokio = { version = "1.53.1", features = ["macros", "rt-multi-thread", "signal", "time", "net", "io-util", "sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zbus = { version = "5.18.0", features = ["p2p", "tokio"], default-features = false }

[dev-dependencies]
lisa-inferenced = { version = "0.1.0", path = "../../daemons/inferenced" }
tempfile = "3.27.0"
