[package]
name = "lisa-injection-suite"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lisa-agentd = { version = "0.1.0", path = "../../daemons/agentd" }
lisa-ledger = { version = "0.1.0", path = "../../libs/lisa-ledger" }
serde_json = "1.0.151"

[dev-dependencies]
tempfile = "3.27.0"
